# oasgen

./: .gitignore  Cargo.toml  Justfile  README.md
.github/workflows/: test.yaml
core/: Cargo.toml
core/src/: attr.rs  lib.rs  operation.rs  parse_error.rs  schema.rs
core/src/schema/: actix.rs  axum.rs  bigdecimal.rs  chrono.rs  cookies.rs  http.rs  phonenumber.rs  sid.rs  sqlx.rs  time.rs  tuple.rs
macro/: Cargo.toml  Justfile
macro/src/: attr.rs  lib.rs  util.rs
macro/tests/: 01-hello.rs  tests.rs
oasgen/: Cargo.toml  Justfile
oasgen/examples/: actix.rs  hello.rs  poc.rs  poc.yaml  simple.rs  simple.yaml  test.rs
oasgen/src/: format.rs  lib.rs  server.rs
oasgen/src/server/: actix.rs  axum.rs  none.rs
oasgen/tests/: 01-hello.rs  01-hello.yaml  test-actix.rs  test-axum.rs  test-enum.rs  test-none.rs
oasgen/tests/test-actix/: 01-hello.rs  01-hello.yaml
oasgen/tests/test-axum/: 01-hello.rs  01-hello.yaml  02-path.rs  02-path.yaml  02-query.rs  02-query.yaml  03-path.rs  03-path.yaml  04-status_code.rs  04-status_code.yaml
oasgen/tests/test-enum/: duration.yaml
oasgen/tests/test-none/: 01-hello.rs  02-required.rs  02-required.yaml  03-newtype.rs  03-newtype.yaml  04-enum.rs  04-enum.yaml  05-serde-attrs.rs  05-serde-attrs.yaml  06-complex-enum.rs  06-complex-enum.yaml  07-ipaddr.rs  07-ipaddr.yaml
openapi-spec-gen/: Cargo.toml
swagger-ui/: Cargo.toml
swagger-ui/src/: config.rs  lib.rs
swagger-ui/swagger-ui-dist/: swagger-initializer.js
