[package]
name = "oasgen-core"
version = "0.14.0"
edition = "2021"
authors = ["Kurt Wolf <kurtwolfbuilds@gmail.com>"]
description = "Dependency of oasgen. Generates OpenAPI 3.0 spec based on Rust code. Works with actix-web, but architected to easily extend to other frameworks (or no framework)."
license = "MIT"
repository = "https://github.com/kurtbuilds/oasgen"
homepage = "https://github.com/kurtbuilds/oasgen"
documentation = "https://docs.rs/oasgen"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inventory = "0.3.13"
indexmap = "2"
openapiv3-extended = { git = "https://github.com/kurtbuilds/openapiv3" }
pin-project-lite = "0.2.10"
structmeta = { version = "0.2.0" }
syn = "2"
serde_json = "1.0.100"
http = "0.2.9"
actix-web = { version = "4.3.1", optional = true }
axum = { version = "0.6.18", optional = true }
uuid = { optional = true, version = "1.4.0" }
chrono = { optional = true, version = "0.4.26" }
time = { optional = true, version = "0.3.23" }
phonenumber = { optional = true, version = "0.3.2" }
sqlx = { version = "0.7", optional = true }
sqlx-core = { version = "0.7", optional = true }
tower-cookies = { version = "0.9.0", optional = true }
sid = { version = "0.4.0", optional = true, package = "sid2" }

[features]
actix = ["actix-web"]
json = ["sqlx-core/json", "sqlx-core"]
cookies = ["tower-cookies"]

[dev-dependencies]
assert_matches = "1.5.0"