[package]
name = "oasgen-core"
version = "0.21.2"
edition = "2021"
authors = ["Kurt Wolf <kurtwolfbuilds@gmail.com>"]
description = "Dependency of oasgen. Generates OpenAPI 3.0 spec based on Rust code. Works with actix-web, but architected to easily extend to other frameworks (or no framework)."
license = "MIT"
repository = "https://github.com/kurtbuilds/oasgen"
homepage = "https://github.com/kurtbuilds/oasgen"
documentation = "https://docs.rs/oasgen"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inventory = "0.3.13"
indexmap = "2"
openapiv3-extended = { version = "6" }
structmeta = { version = "0.3.0" }
syn = "2"
serde_json = "1.0.100"
http = "1.0.0"
actix-web = { version = "4.3.1", optional = true }
axum = { version = "0.7.4", optional = true }
uuid = { optional = true, version = "1.4.0" }
chrono = { optional = true, version = "0.4.26" }
time = { optional = true, version = "0.3.23" }
phonenumber = { optional = true, version = "0.3.2" }
sqlx = { version = "0.8.2", optional = true }
sqlx-core = { version = "0.8.2", optional = true }
tower-cookies = { version = "0.10.0", optional = true }
kurtbuilds_sid = { version = "0.5.0", optional = true }
serde_qs = { version = "0.13.0", optional = true }
bigdecimal = { version = "0.4.2", optional = true }

[features]
actix = ["actix-web", "serde_qs?/actix4"]
json = ["sqlx-core/json", "sqlx-core"]
cookies = ["tower-cookies"]
qs = ["serde_qs"]
sid = ["kurtbuilds_sid"]
axum = ["dep:axum", "serde_qs?/axum"]
bigdecimal = ["dep:bigdecimal"]

[dev-dependencies]
assert_matches = "1.5.0"
