[package]
name = "oasgen-core"
version.workspace = true
edition.workspace = true
authors = ["Kurt Wolf <kurtwolfbuilds@gmail.com>"]
description = "Dependency of oasgen. Generates OpenAPI 3.0 spec based on Rust code. Works with actix-web, but architected to easily extend to other frameworks (or no framework)."
license = "MIT"
repository = "https://github.com/kurtbuilds/oasgen"
homepage = "https://github.com/kurtbuilds/oasgen"
documentation = "https://docs.rs/oasgen"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inventory = "0.3.13"
openapiv3-extended = {  git = "https://github.com/18IsabellaM/openapiv3", branch = "isabella/error_json"}
#openapiv3-extended = { version = "6" }
serde_json = "1.0.100"
actix-web = { version = "4.3.1", optional = true }
axum = { version = "0.8.1", optional = true }
uuid = { optional = true, version = "1.4.0" }
chrono = { optional = true, version = "0.4.26" }
time = { optional = true, version = "0.3.23" }
phonenumber = { optional = true, version = "0.3.2" }
sqlx = { version = "0.8.2", optional = true }
sqlx-core = { version = "0.8.2", optional = true }
tower-cookies = { version = "0.11.0", optional = true }
kurtbuilds_sid = { version = "0.7", optional = true }
serde_qs = { version = "0.15.0", optional = true }
bigdecimal = { version = "0.4.2", optional = true }
http = "1.2.0"

[features]
actix = ["actix-web", "serde_qs?/actix4"]
json = ["sqlx-core/json", "sqlx-core"]
cookies = ["tower-cookies"]
qs = ["serde_qs"]
sid = ["kurtbuilds_sid"]
axum = ["dep:axum", "serde_qs?/axum"]
bigdecimal = ["dep:bigdecimal"]
