[package]
name = "oasgen-macro"
version = "0.3.0"
edition = "2021"
authors = ["Kurt Wolf <kurtwolfbuilds@gmail.com>"]
description = "Dependency of oasgen. Generates OpenAPI 3.0 spec based on Rust code. Works with actix-web, but architected to easily extend to other frameworks (or no framework)."
license = "MIT"
repository = "https://github.com/kurtbuilds/oasgen"
homepage = "https://github.com/kurtbuilds/oasgen"
documentation = "https://docs.rs/oasgen"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0.51"
oasgen-core = { path = "../core" , version = "0.3.0"}

[dev-dependencies]
trybuild = "1.0.77"
