[package]
name = "oasgen"
version = "0.11.0"
edition = "2021"
authors = ["Kurt Wolf <kurtwolfbuilds@gmail.com>"]
description = "Generates OpenAPI 3.0 spec based on Rust code. Works with axum, actix-web, or independent of a web framework."
license = "MIT"
repository = "https://github.com/kurtbuilds/oasgen"
homepage = "https://github.com/kurtbuilds/oasgen"
documentation = "https://docs.rs/oasgen"
readme = "../README.md"
autotests = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
doctest = false

[[test]]
name = "oasgen_test_no_framework"
path = "tests/test-none.rs"

[[test]]
name = "oasgen_test_actix"
path = "tests/test-actix.rs"
required-features = ["actix"]

[dependencies]
actix-web = { version = "4.3.0", optional = true }
axum = { version = "0.6.9", optional = true }
futures = "0.3.26"
http = "0.2.9"
indexmap = "2"
oasgen-core = { path = "../core", version = "0.11.0"}
oasgen-macro = { path = "../macro", version = "0.11.0"}
openapiv3 = { version = "3" , package = "openapiv3-extended"}
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
serde_yaml = "0.9.17"
tokio = { version = "1.25.0", features = ["full"] }
swagger-ui2 = { version = "0.5.3", optional = true, path = "../swagger-ui" }
tower-cookies = { version = "0.9.0", optional = true }
regex = "1.7.2"
once_cell = "1.17.1"

[features]
actix = ["actix-web", "oasgen-core/actix"]
axum = ["oasgen-core/axum", "dep:axum"]
time = ["oasgen-core/time"]
chrono = ["oasgen-core/chrono"]
uuid = ["oasgen-core/uuid"]
sqlx = ["oasgen-core/sqlx"]
swagger-ui = ["swagger-ui2"]
json = ["oasgen-core/json"]
cookies = ["tower-cookies", "oasgen-core/cookies"]
phonenumber = ["oasgen-core/phonenumber"]
sid = ["oasgen-core/sid"]

[dev-dependencies]
trybuild = "1.0.77"
actix-web = { version = "4.3.0" }
pretty_assertions = "1.3.0"
# Fixes this issue: https://github.com/rust-lang/libc/issues/3297
# Can be removed once fixed
libc = "=0.2.144"
