[package]
name = "openapi-spec-gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
osg_core = { path = "../core" , package = "openapi-spec-gen-core" }
osg_macro = { path = "../macro" , package = "openapi-spec-gen-macro" }