[package]
name = "swagger-ui2"
version = "0.5.4"
edition = "2021"
license = "MIT"
description = "Library to embed swagger-ui into your rust application. Entirely independent of web framework."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "swagger_ui"
path = "src/lib.rs"

[dependencies]
http = "1.0.0"
rust-embed = "8.2.0"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.100"
bytes = "1.4.0"
